# neutropenia_clingen_agents

./: README.md  pyproject.toml  requirements.txt  smoke_test.sh
definitions/old/: clingen_result_statement.txt  clingen_results_statement_vaf.txt  gene.txt  mutation_syntax.txt
inference/: cnlp_seqgen.py  prompt.py
k_shot_examples/: 7_28_definition_update_examples.tsv  ex12_and_invitae.tsv  ex_1_and_2_samples.tsv  karyns_new_examples.tsv  originals.tsv
old/: a100_request.sh  autollm_sh.sh  entry.py  environment.yml  excelify.py  fewshot_llama2.py  ipython_load.py  mixtral_session_example.org  requirements.txt  run-llm.sh  run_sbatch_crc.sh  srun_version.sh  test_lora1_env.sh  to_instances.py
old/prompts/llamas/llama2/: default_onc_assistant.txt
prompts/: deepphe_prompt_fewshot.txt  first_section_parsing.txt  no_role_in_prompt_section_parsing.txt  second_section_parsing.txt  syntax_statement_parse.txt  syntax_statement_parse_INITIAL.txt  tokenization.txt  tokenization_edit_1.txt  tokenization_edit_2.txt  tokenization_with_attribute_criteria.txt  true_vaf_with_mutations_multi_mention_per_sample_7_28_25.txt  vtype_attempt.txt
resources/examples/: ex12_and_invitae.tsv
resources/prompts/: pydantic_test.txt  vtype_attempt.txt  vtype_fixed.txt
scripts/parse/: extraction_few_shot.sh  extraction_test.sh  fewshot_test.sh
scripts/sectioning/: first.sh  no_role_in_prompt.sh  second.sh  with_gene_detecting.sh
scripts/tokenization/: tokenization_attr_criteria.sh  tokenization_attr_criteria_presectioned.sh  tokenization_one_shot_document.sh  tokenization_test.sh  tokenization_zero_shot_individual_lines.sh  tokenization_zero_shot_json.sh  tokenization_zero_shot_json_edit_2.sh
src/neutropenia_clingen_agents/: __init__.py  clingen_rest.py  post_process.py  process.py
src/neutropenia_clingen_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/neutropenia_clingen_agents/_cli/: main.py  rest.py
src/neutropenia_clingen_agents/agents/: clingen_workflow.py  mention_agent.py  state_model.py  validation_agent.py
src/neutropenia_clingen_agents/agents/resources/examples/: default.py
src/neutropenia_clingen_agents/agents/resources/prompts/: vtype_fixed.py
src/neutropenia_clingen_agents/gene_mention_agent/: core.py  utils.py
src/neutropenia_clingen_agents/utils/: filesystem.py  prompt.py  rest.py  serialization.py
text_engineering/: NeutropeniaSectionRegex.bsv  call_script.sh  coordinate_final_tsv.py  coordinate_tsv.py  neutropenia_sectionizer.py  post_processing.py  process_pdf.py  tsv_fix.py
